--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,10 @@ WORKDIR /app
 
 # Install system dependencies for canvas and sharp
 RUN apk add --no-cache \
+    build-base \
+    make \
+    g++ \
+    python3 \
     cairo-dev \
     jpeg-dev \
     pango-dev \
