--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
     "pdfkit": "^0.17.2",
     "sharp": "^0.34.3",
     "ws": "^8.18.3"
